[package]
name = "icmp-rust-agent"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]

[dependencies]
structopt = "0.2"
log = "0.4.6"
env_logger = "0.6"
config = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
futures = "0.1"
futures-cpupool = "^0.1"

[dependencies.rdkafka]
version = "0.17.0"
# features = ["ssl", "sasl"]