[package]
name = "icmp-rust-agent"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"

[dependencies]
structopt = "0.2"
log = "0.4.6"
env_logger = "0.6"
config = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "0.1", features = ["async-await-preview"]}
tokio-async-await = "0.1"
trust-dns-resolver = "0.10"
futures = "0.1"
tokio-ping = "0.2"

[dependencies.rdkafka]
version = "0.17.0"
# features = ["ssl", "sasl"]